<resources>
    <string name="app_name">WanAndroid</string>
    <string name="register_button">注册</string>
    <string name="log_in_button">登录</string>
    <string name="account_hint">账号</string>
    <string name="password_hint">密码</string>
    <string name="repassword_hint">确认密码</string>
    <string name="log_in_page_title">LOG IN</string>
    <string name="register_page_title">Register</string>
    <string name="register_page_title2">wanAndroid</string>
    <string name="dot">/</string>
    <string name="体系">体系</string>
    <string name="项目">项目</string>
    <string name="navigation_1">首页</string>
    <string name="navigation_2">体系</string>
    <string name="navigation_3">广场</string>
    <string name="navigation_4">我的</string>
    <string name="square_1">广场</string>
    <string name="square_2">我的分享</string>
    <string name="github_link">project link →  </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="mycollect">我的收藏</string>
    <string name="myshare">我的积分</string>
    <string name="worklink">关于我们</string>
    <string name="search_hint">搜索更多干货</string>
    <string name="search_for_hot">搜索热词</string>
    <string name="log_off">退出登录</string>
    <string name="log_in_text">点击登录</string>
    <string name="coin_get">我的积分</string>
    <string name="coin_rank">积分排行</string>
    <string name="visitor_log_in">游客登录</string>
    <string name="log_in_second_title">Welcome wanAndroid</string>
    <string name="way_of_log">—— 其他方式登录 ——</string>
    <string name="collect_web">收藏网站</string>
    <string name="collect_article">收藏文章</string>
    <string name="cancel">取消</string>
    <string name="nan_article">你还没有分享过文章哦,快来和小伙伴们一起分享吧</string>
    <string name="about_msg">wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroidwanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid
        \wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid
        \wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid
        \wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid
        \wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid
        \wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid
        \wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid
        \wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid
        \wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid
        \wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid
        \wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid\wanAndroid </string>


</resources>