<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomePage">
    <FrameLayout
        android:id="@+id/home_page_v"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        />
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/home_home"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <TextView
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/navigation_1"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/knowledge_hierarchy"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <TextView
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/navigation_2"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/public_square"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <TextView
                android:layout_marginBottom="6dp"
                android:text="@string/navigation_3"
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/myself_space"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <TextView
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/navigation_4"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>