<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.main.MyselfFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/back_ground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/心"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_weight="9"
                android:layout_marginLeft="12dp"
                android:textColor="@color/black_2"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mycollect" />
            <ImageView
                android:src="@drawable/进入"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:src="@drawable/金币"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_weight="9"
                android:layout_marginLeft="12dp"
                android:textColor="@color/black_2"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/myshare" />
            <ImageView
                android:src="@drawable/进入"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:src="@drawable/关于"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_weight="9"
                android:layout_marginLeft="12dp"
                android:textColor="@color/black_2"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/worklink" />
            <ImageView
                android:src="@drawable/进入"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <TextView
            android:background="#FBFCFD"
            android:textColor="@color/select_2"
            android:gravity="center"
            android:text="@string/log_off"
            android:textSize="24sp"
            android:layout_marginTop="56dp"
            android:layout_width="match_parent"
            android:layout_height="46dp"/>

    </LinearLayout>


</LinearLayout>