<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bcakgroud_color"
    android:orientation="vertical"
    tools:context=".log_and_register.RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backbt" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_page_title"
        android:textColor="@color/white"
        android:textSize="38dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/circle_dittexte"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/register_user_u"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/edit_Register_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/account_hint"
                android:inputType="text"
                android:lines="1"
                android:maxLength="16"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/circle_dittexte"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/register_pass_clock"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:src="@drawable/lock" />

            <EditText
                android:id="@+id/edit_Register_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/password_hint"
                android:inputType="text"
                android:lines="1"
                android:maxLength="18"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/password_eye"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/closeeye" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/circle_dittexte"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/register_repass_clock"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:src="@drawable/lock" />

            <EditText
                android:id="@+id/edit_Register_repassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/repassword_hint"
                android:inputType="text"
                android:lines="1"
                android:maxLength="18"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/repassword_eye"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/closeeye" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_Register"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/circle"
            android:text="@string/register_button"
            app:backgroundTint="@color/text_sup" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_page_title2"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.089999974" />

</androidx.constraintlayout.widget.ConstraintLayout>